--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -1988,11 +1988,6 @@ body.no-scroll {
 	margin: 40px 0;
 }
 
-.layouts-items {
-	font-size: 20px;
-	font-weight: 300;
-	line-height: 1.5em;
-}
 .layouts-items .text-page {
 	font-size: 0.8em;
 }
@@ -3364,13 +3359,7 @@ sidebar li.selected a { color: #000; }
 	bottom: 1.3em;
 	right: 2%;
 }
-.layouts-item {
-	float: left;
-	width: 29.33%;
-	margin: 2%;
-	background-position: 50% 0;
-	background-repeat: no-repeat;
-}
+
 .layouts-item .name {
 	color: #000;
 	font-size: 1.5em;
@@ -5514,17 +5503,25 @@ input:focus {
 }
 .why-work__text--left {
 	background-color: #f3f3f3;
-	max-width: 70%;
+	max-width: 63%;
 	line-height: 1;
 	border-radius: 5px;
+	padding: 40px 25px 56px 25px;
+	
 }
 .why-work__text--right {
+	max-width: 72%;
 	background-color: #e9e9e9;
-	max-width: 70%;
 	margin-left: auto;
-	margin-top: -20px;
+	margin-top: -34px;
 	line-height: 1;
 	border-radius: 5px;
+	padding: 52px 16px 18px 48px;
+	
+}
+.why-work__text--right p {
+	line-height: 1.2;
+	margin-bottom: 26px;
 }
 .why-work__text--right::before {
 	content: '';
@@ -5532,11 +5529,11 @@ input:focus {
 	border: 1px solid #000;
 	border-radius: 5px;
 	position: absolute;
-	left: -26%;
-	right: 10%;
-	top: -15%;
-	bottom: 55%;
-	z-index: -1;
+	left: -24%;
+    right: 14%;
+    top: -20%;
+    bottom: 43%;
+    z-index: -1;
 }
 .request-calc-2.blue {
 	background-color: #167ec2;
@@ -5686,8 +5683,11 @@ input:focus {
 	right: 3%;
 	width: 80%;
 }
-.main-makets{
+.main-makets {
 	padding-block: 38px;
+}
+.main-makets .container {
+	max-width: 1400px;
 }
 .main-makets .title {
 	font-weight: 300;
@@ -5696,31 +5696,35 @@ input:focus {
 	color: #000;
 	text-align: left;
 }
-.layouts-item {
-	float: none;
-	width: 48%;
-	margin: inherit;
-	background-position: 50% 0;
-	background-repeat: no-repeat;
-}
+
 .layouts-item .name {
 	font-weight: 300;
 	font-size: 24px;
 	line-height: 98%;
 	text-transform: uppercase;
 	color: #000;
+	margin-bottom: 16px;
 
 	padding: 0;
 	height: inherit;
 }
 .layouts-items {
-	gap: 36px;
+	gap: 26px;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 1.5em;
+	padding-left: 40px;
 }
 .layouts-item {
 	border: 1px solid #c0c0c0;
 	border-radius: 5px;
 	background: rgba(255, 255, 255, 0.1);
 	padding-inline: 32px;
+	float: none;
+	width: 49%;
+	margin: inherit;
+	background-position: 50% 0;
+	background-repeat: no-repeat;
 }
 .item-list {
 	padding: 0;
@@ -5732,17 +5736,7 @@ input:focus {
 	line-height: 120%;
 	color: #000;
 }
-.layouts-item ul li.none {
-	/* opacity: 0; */
-	/* height: 0; */
-	/* overflow: hidden; */
-	/* transition: opacity 0.5s ease, height 0.5s ease; */
-}
-.layouts-item ul li.show {
-	/* opacity: 1; */
-	/* height: auto; */
-	/* transition: opacity 0.5s ease, height 0.5s ease; */
-}
+
 .layouts-item ul li .display-all {
 	background: url('images/arrow_right.svg') no-repeat center / cover;
 	color: #8dce26;
@@ -5767,12 +5761,17 @@ input:focus {
 	transform: rotate(135deg);
 	transition: transform 0.5s ease;
 }
+.instruments{
+	padding-block: 60px;
+}
 .instruments__title {
 	line-height: 1;
 	max-width: 50%;
+	padding-left: 34px;
+	margin-bottom: 60px;
 }
 .instruments__list {
-	padding-left: 16px;
+	padding-left: 50px;
 	list-style: none;
 	position: relative;
 }
@@ -5810,7 +5809,7 @@ input:focus {
 	position: absolute;
 	width: 12px;
 	height: 12px;
-	top: 50%;
+	top: 42%;
 	transform: translateY(-50%);
 	left: -6px;
 	background-color: #167ec2;
@@ -6088,6 +6087,10 @@ input:focus {
 }
 .why-work {
 	overflow: hidden;
+	padding-block: 64px;
+}
+.why-work .container {
+	max-width: 1346px;
 }
 .menu__title {
 	font-weight: 300;
