--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -423,7 +423,7 @@ body.no-scroll {
 }
 .form-green .form-row .row-name {
 	display: block;
-	/* padding-bottom: 4px; */
+	
 }
 .form-green .form-row .inp-text {
 	font-size: inherit;
@@ -1366,16 +1366,8 @@ body.no-scroll {
 	color: #2c80c5;
 }
 
-.form-main {
-	padding: 0 6%;
-	position: relative;
-	z-index: 20;
-}
-.form-main.contact {
-	padding: 0;
-	float: right;
-	width: 65%;
-}
+
+
 .form-large {
 	font-weight: 300;
 	color: #fff;
@@ -1497,22 +1489,13 @@ body.no-scroll {
 	float: left;
 	margin-right: 6.67%;
 }
-.form-main.contact {
-	padding: 55px 0 0;
-}
+
 .form-main.contact .form-large .private .check {
 	float: none;
 	width: auto;
 }
-.form-main.contact .form-large .private .info {
-	float: none;
-	width: auto;
-}
-.form-main.contact .form-large .private {
-	width: 61.66%;
-	margin-right: 5%;
-	float: left;
-}
+
+
 .form-main.contact .form-large .form-submit {
 	padding: 30px 0 0;
 }
@@ -1636,15 +1619,19 @@ body.no-scroll {
 .footer {
 	font-size: 14px;
 	font-weight: 300;
-	padding: 1em 0;
+	padding: 40px 0;
+}
+.footer .container{
+	max-width: 1416px;
 }
 .footer .menu ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	display: flex;
-	gap: 20px;
+	gap: 31px;
 	flex-wrap: wrap;
+	margin-bottom: 30px;
 }
 .footer .menu ul li {
 	/* float: left; */
@@ -1658,10 +1645,13 @@ body.no-scroll {
 }
 .footer .info {
 	/* clear: left; */
-	color: #3b3b3b;
+	color: #000;
 	font-size: 16px;
 	line-height: 1.4;
 	padding: 0.7em 0;
+}
+.footer .polity  {
+	gap: 12px;
 }
 .footer .polity a {
 	color: #2c80c5;
@@ -2254,7 +2244,7 @@ body.no-scroll {
 }
 
 .maps {
-	height: 335px;
+	height: 330px;
 }
 .maps .left {
 	width: auto;
@@ -5837,7 +5827,7 @@ input:focus {
 }
 .advantages{
 	padding-top: 26px;
-	padding-bottom: 48px;
+	padding-bottom: 96px;
 }
 .advantages__box-img{
 	margin-left: -36px;
@@ -5896,6 +5886,8 @@ input:focus {
 .main-contacts {
 	background-color: #1b92d1;
 	position: relative;
+	padding-top: 42px;
+	padding-bottom: 36px;
 }
 .main-contacts::before {
 	content: '';
@@ -5910,11 +5902,10 @@ input:focus {
 	top: -11%;
 	right: 28%;
 }
-.form-main.contact {
-	padding: 0;
-	float: none;
-	width: inherit;
+.main-contacts__box{
+	padding-left: 56px;
 }
+
 .main-contacts .large-title {
 	padding: 0 0 30px;
 	position: relative;
@@ -5923,6 +5914,7 @@ input:focus {
 	font-weight: 300;
 	color: #fff;
 	text-transform: uppercase;
+	margin-bottom: 16px;
 }
 
 .main-contacts .address {
@@ -5930,15 +5922,17 @@ input:focus {
 	font-size: 24px;
 	line-height: 151%;
 	color: #fff;
-	margin-bottom: 36px;
+	margin-bottom: 30px;
 	max-width: 50%;
+	padding-left: 5px;
 }
 .main-contacts .phone {
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 130%;
 	color: #fff;
-	margin-bottom: 18px;
+	margin-bottom: 20px;
+	padding-left: 5px;
 }
 .main-contacts .phone a {
 	text-decoration: none;
@@ -5949,12 +5943,18 @@ input:focus {
 	line-height: 130%;
 	color: #fff;
 	padding-inline: 12px;
-	padding-block: 8px;
+	padding-block: 7px;
 	border: 1px solid #fff;
 	border-radius: 35px;
 	display: inline-block;
-	margin-bottom: 30px;
-	max-width: 180px;
+	margin-bottom: 28px;
+	max-width: 178px;
+	margin-left: 5px;
+}
+.main-contacts__messenger-box{
+	padding-left: 14px;
+	gap: 20px;
+	margin-bottom: 60px;
 }
 .main-contacts .messenger__text,
 .request-calc-2 .messenger__text {
@@ -5971,7 +5971,7 @@ input:focus {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	gap: 20px;
+	gap: 12px;
 }
 .main-contacts .messenger__list a,
 .request-calc-2 .messenger__list a {
@@ -5980,8 +5980,8 @@ input:focus {
 	display: block;
 }
 .main-contacts .messenger__list li {
-	width: 32px;
-	height: 32px;
+	width: 25px;
+	height: 25px;
 }
 
 .request-calc-2 .messenger__list li {
@@ -6033,6 +6033,7 @@ input:focus {
 }
 .main-contacts__text p {
 	font-weight: 300;
+	margin-bottom: 0;
 
 	line-height: 100%;
 	color: #fff;
@@ -6042,6 +6043,10 @@ input:focus {
 }
 .main-contacts .social__list {
 	list-style: none;
+	padding-left: 0;
+	margin-bottom: 0;
+	padding-right: 20px;
+    gap: 14px;
 }
 .main-contacts .social__list a {
 	width: 100%;
@@ -6061,21 +6066,31 @@ input:focus {
 .advantages__title {
 	max-width: 300px;
 }
+.main-contacts .container{
+	max-width: 1370px;
+}
 .main-contacts form {
 	flex-direction: column;
+	gap: 27px;
 }
 .main-contacts__text {
-	max-width: 78%;
+	max-width: 77%;
+	padding-left: 14px;
+	gap: 82px;
+}
+.main-contacts__text--small {
+	margin-bottom: 14px;
 }
 .main-contacts .form-main.contact {
 	position: relative;
 	border: 10px solid #fff;
 	border-right: none;
 	border-radius: 5px;
-	padding-top: 35px;
-	padding-left: 55px;
-	/* overflow: hidden; */
-	max-width: 40%;
+	padding: 35px 0 38px 60px;
+	   
+    max-width: 35.6%;
+    
+    margin-top: 5px;
 }
 .main-contacts .form-main.contact::after,
 .main-contacts .form-main.contact::before {
@@ -6095,15 +6110,37 @@ input:focus {
 	top: -10px;
 }
 
+.main-contacts .form-green .form-row .row-name{
+	margin-bottom: 2px;
+}
+.main-contacts .form-green .form-row:first-of-type .row-name{
+	margin-bottom: 12px;
+}
+
 .main-contacts .form-green .form-row label {
 	display: block;
 }
+.main-contacts .form-green .file-upload  {
+	margin-top: -22px;
+	margin-bottom: 10px;
+}
 .main-contacts .form-green .file-upload .text-label {
 	display: inline-block;
+	padding-left: 65px;
+    padding-right: 42px;
 }
 .main-contacts .form-green .private .check {
 	max-width: 100%;
 }
+.form-green .private .check label{
+	background-position-y: 7%;
+	line-height: 1.2;
+}
+.main-contacts .form-green .form-submit  {
+	margin-left: 0;
+align-self:flex-start;
+width: 100%;
+margin-bottom: 10px;}
 .main-contacts .form-green .form-submit button {
 	display: block;
 	width: 100%;
@@ -6343,8 +6380,8 @@ input:focus {
 }
 .scroll-up {
 	position: fixed;
-	right: 150px;
-	bottom: 50px;
+	right: 68px;
+    bottom: 150px;
 	z-index: 1000;
 	width: 50px;
 	height: 50px;
